# flynt

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Justfile  LICENSE  README.md  flake.nix  release-plz.toml
.devcontainer/: Dockerfile  devcontainer.json
.omegon/: agent-journal.md  history
assets/: main.css
crates/codex-agent/: Cargo.toml  manifest.toml
crates/codex-agent/src/: extension.rs  main.rs  mcp.rs  tools.rs
crates/codex-app/: Cargo.toml  Codex.appstore.entitlements  Codex.entitlements  build.rs
crates/codex-app/assets/: app.css  icon.icns  welcome-note.md
crates/codex-app/assets/styles/: components.css  graph.css  kanban.css  layout.css  markdown.css  reset.css  search.css  settings.css  tabs.css  welcome.css
crates/codex-app/assets/themes/: alpharius.css
crates/codex-app/src/: acp.rs  app.rs  bootstrap.rs  daemon_manager.rs  lib.rs  main.rs  menu.rs  state.rs
crates/codex-app/src/components/: agent_rail.rs  command_palette.rs  context_menu.rs  daemon_settings.rs  identity_settings.rs  mod.rs  provider_settings.rs  sidebar.rs  tab_bar.rs  toolbar.rs
crates/codex-app/src/views/: excalidraw.rs  graph.rs  kanban.rs  mod.rs  notes.rs  publication_rules.rs  search.rs  settings.rs  welcome.rs
crates/codex-core/: Cargo.toml
crates/codex-core/src/: conflict.rs  daemon.rs  daily.rs  datum.rs  external_ref.rs  graph.rs  html_to_md.rs  identity.rs  lib.rs  manifest.rs  models.rs  parser.rs  providers.rs  query.rs  seal.rs  store.rs  sync.rs  task_file.rs  templates.rs
crates/codex-mobile/: .gitignore  Cargo.toml  Dioxus.toml
crates/codex-mobile/assets/: mobile.css
crates/codex-mobile/assets/AppIcon.appiconset/: Contents.json
crates/codex-mobile/ios/: ExportOptions.plist  Info.plist
crates/codex-mobile/ios/Codex/Sources/: KeychainHelper.swift
crates/codex-mobile/ios/ShareExtension/: Info.plist  ShareExtension.entitlements
crates/codex-mobile/ios/ShareExtension/Sources/: InboxWriter.swift  ShareViewController.swift
crates/codex-mobile/src/: acp.rs  app.rs  bootstrap.rs  icons.rs  lib.rs  main.rs  oauth.rs
crates/codex-mobile/src/views/: agent.rs  graph.rs  kanban.rs  mod.rs  notes.rs  onboarding.rs
crates/codex-models/: Cargo.toml
crates/codex-models/src/: lib.rs  task.rs  task_file.rs
crates/codex-store/: Cargo.toml
crates/codex-store/src/: lib.rs  migrate.rs  sqlite.rs  task_file.rs  vault.rs  watcher.rs
crates/codex-store/src/sync/: auto.rs  cloud.rs  git.rs  icloud.rs  mod.rs  project_git.rs  util.rs
crates/codex-store/tests/: git_sync.rs  sandbox.rs
crates/flynt-agent/: Cargo.toml  manifest.toml
crates/flynt-agent/src/: drawing_tools.rs  extension.rs  flow_tools.rs  forge_tools.rs  lib.rs  main.rs
crates/flynt-app/: Cargo.toml  Codex.entitlements  build.rs
crates/flynt-app/assets/: app.css  icon.icns  welcome-note.md
crates/flynt-app/assets/styles/: canvas.css  components.css  graph.css  kanban.css  layout.css  lenses.css  markdown.css  reset.css  search.css  settings.css  tabs.css  task-strip.css
crates/flynt-app/assets/themes/: alpharius.css
crates/flynt-app/src/: acp.rs  app.rs  bootstrap.rs  canvas_assets.rs  canvas_capture.rs  daemon_manager.rs  icons.rs  lib.rs  main.rs  menu.rs  omegon_setup.rs  push_pipeline.rs  self_update.rs  state.rs  sync_prereq.rs  theme.rs  ui_state.rs
crates/flynt-app/src/components/: agent_rail.rs  command_palette.rs  context_menu.rs  daemon_settings.rs  field_schema.rs  help_hint.rs  identity_settings.rs  mod.rs  note_preview.rs  panel_divider.rs  provider_settings.rs  sidebar.rs  sync_status_pill.rs  tab_bar.rs  task_metadata_strip.rs  toolbar.rs
crates/flynt-app/src/components/omegon/: armory.rs  config_bridge.rs  extension_config.rs  extension_manager.rs  mod.rs  omegon_settings.rs  persona_picker.rs  posture_picker.rs  session_status.rs  skill_settings.rs
crates/flynt-app/src/views/: canvas.rs  excalidraw.rs  flow.rs  graph.rs  indexing_scopes.rs  kanban.rs  lenses.rs  mod.rs  notes.rs  publication_rules.rs  search.rs  settings.rs  welcome.rs
crates/flynt-core/: Cargo.toml
crates/flynt-core/src/: canvas.rs  conflict.rs  daemon.rs  datum.rs  drawing.rs  external_ref.rs  graph.rs  html_to_md.rs  identity.rs  lib.rs  manifest.rs  models.rs  parser.rs  providers.rs  query.rs  seal.rs  store.rs  sync.rs  task_file.rs  templates.rs
crates/flynt-flow/: Cargo.toml
crates/flynt-flow/src/: io.rs  lib.rs  schema.rs
crates/flynt-flow/tests/: roundtrip.rs
crates/flynt-flow/tests/golden/: auth-subsystem.flow
crates/flynt-forge/: Cargo.toml
crates/flynt-forge/src/: auth.rs  lib.rs  push.rs  store.rs  sync.rs
crates/flynt-forge/src/clients/: forgejo.rs  github.rs  gitlab.rs  mod.rs
crates/flynt-forge/src/mapping/: forgejo.rs  github.rs  gitlab.rs  mod.rs
crates/flynt-git-helper/: Cargo.toml
crates/flynt-git-helper/src/: main.rs
crates/flynt-mobile/: .gitignore  Cargo.toml  Dioxus.toml
crates/flynt-mobile/.omegon/: agent-journal.md
crates/flynt-mobile/android/: AndroidManifest.xml.template  README.md
crates/flynt-mobile/assets/: mobile.css
crates/flynt-mobile/assets/Assets.xcassets/AppIcon.appiconset/: Contents.json
crates/flynt-mobile/ios/: Codex.entitlements  ExportOptions.plist  Info.plist
crates/flynt-mobile/ios/Flynt/Sources/: GitHubOAuth.swift
crates/flynt-mobile/ios/ShareExtension/: Info.plist
crates/flynt-mobile/ios/ShareExtension/Sources/: InboxWriter.swift  ShareItem.swift  ShareViewController.swift
crates/flynt-mobile/src/: app.rs  bootstrap.rs  main.rs  oauth.rs
crates/flynt-mobile/src/views/: agent.rs  graph.rs  kanban.rs  mod.rs  notes.rs  onboarding.rs
crates/flynt-models/: Cargo.toml
crates/flynt-models/src/: engagement.rs  lib.rs  task.rs  task_file.rs
crates/omegon-design/: Cargo.toml  manifest.toml
crates/omegon-design/assets/: SKILL.md  style-guide-template.md
crates/omegon-design/src/: extension.rs  main.rs  skill_install.rs  style_guide.rs
design/: flow-canvas-bidirectional.md  flow-workflow-export.md  obsidian-feature-parity.md  obsidian-parity-milestone.md  (+5 more)
(+71 files in other folders)
