[workspace]
members = [
    "crates/codex-core",
    "crates/codex-store",
    "crates/codex-app",
    "crates/codex-agent",
    "crates/codex-mobile",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Black Meridian"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# IDs + time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown + Syntax highlighting
comrak    = { version = "0.31", default-features = false, features = ["shortcodes"] }
syntect   = { version = "5", default-features = false, features = ["default-fancy"] }
once_cell = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }

# File watching
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

# Git sync
git2 = { version = "0.20", default-features = false }

# S3 / object storage
object_store = { version = "0.11", features = ["aws"] }

# ACP (Agent Client Protocol)
agent-client-protocol = "0.10.4"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# UI
dirs = "5"
dioxus = { version = "0.7", features = ["launch", "devtools", "logger", "lib", "desktop"] }

# Internal crates
codex-core = { path = "crates/codex-core" }
codex-store = { path = "crates/codex-store" }
codex-agent = { path = "crates/codex-agent" }
