[workspace]
members = [
    "crates/flynt-models",
    "crates/flynt-core",
    "crates/flynt-store",
    "crates/flynt-forge",
    "crates/flynt-flow",
    "crates/flynt-app",
    "crates/flynt-agent",
    "crates/flynt-git-helper",
    "crates/flynt-mobile",
    "crates/omegon-design",
]
resolver = "2"

[workspace.package]
version = "0.10.2"
edition = "2024"
authors = ["Black Meridian"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# IDs + time
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown + Syntax highlighting
comrak    = { version = "0.31", default-features = false, features = ["shortcodes"] }
syntect   = { version = "5", default-features = false, features = ["default-fancy"] }
once_cell = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }

# File watching — all platform backends enabled, notify selects the right one at compile time
notify = { version = "7" }

# Git sync (vendored for cross-platform builds)
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# S3 / object storage
object_store = { version = "0.11", features = ["aws"] }

# ACP (Agent Client Protocol)
agent-client-protocol = "0.10.4"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

# UI
dirs = "5"
dioxus = { version = "0.7", features = ["launch", "devtools", "logger", "lib", "desktop"] }

# Forge contract (shared types across styrene ecosystem)
styrene-forge = "0.1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"

# Internal crates
flynt-models = { path = "crates/flynt-models" }
flynt-core = { path = "crates/flynt-core" }
flynt-store = { path = "crates/flynt-store" }
flynt-forge = { path = "crates/flynt-forge" }
flynt-flow = { path = "crates/flynt-flow" }
flynt-agent = { path = "crates/flynt-agent" }
