[package]
name = "codex-agent"
version.workspace = true
edition.workspace = true

[dependencies]
codex-core = { workspace = true }
codex-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
