[package]
name = "codex-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codex-agent"
path = "src/main.rs"

[dependencies]
codex-core  = { workspace = true }
codex-store = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
omegon-extension = { path = "../../../omegon/core/crates/omegon-extension" }
async-trait = "0.1"
dirs        = "5"
clap = { version = "4", features = ["derive", "env"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
