[package]
name = "codex-app"
version.workspace = true
edition.workspace = true
default-run = "codyx"

[dependencies]
codex-core  = { workspace = true }
codex-store = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono     = { workspace = true }
comrak      = { workspace = true }
syntect     = { workspace = true }
once_cell   = { workspace = true }
uuid        = { workspace = true }
wry         = "0.53"
dirs        = "5"
agent-client-protocol = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
tokio-util  = { workspace = true }
dioxus      = { workspace = true, features = ["desktop"] }
rfd         = "0.15"
muda        = "0.17"

[dev-dependencies]
tempfile    = "3"

[package.metadata.bundle]
name = "Codyx"
identifier = "io.styrene.codex"
icon = ["assets/icon.icns"]
short_description = "Local-first knowledge vault"

[[bin]]
name = "codyx"
path = "src/main.rs"
