[package]
name = "codex-core"
version.workspace = true
edition.workspace = true

[dependencies]
codex-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
comrak = { workspace = true }
base64 = "0.22"
# TODO: upgrade to 0.3.0 when published (adds discover, format, AllPublicKeys, identity_hash)
styrene-identity = { version = "0.1", features = ["file-signer"] }
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"
