[package]
name = "codex-core"
version.workspace = true
edition.workspace = true

[dependencies]
codex-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
comrak = { workspace = true }
base64 = "0.22"
styrene-identity = { version = "0.3", features = ["file-signer"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"
