[package]
name = "codex-mobile"
version.workspace = true
edition.workspace = true

[dependencies]
codex-core  = { workspace = true }
codex-store = { path = "../codex-store", default-features = false } # no file-watcher
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
comrak      = { workspace = true }
uuid        = { workspace = true }
dirs        = "5"
dioxus      = { workspace = true, features = ["mobile"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = { workspace = true }
url = "2"
