[package]
name = "codex-models"
description = "Core data types for Codex — Task, Board, Priority, and task file serialization. Minimal deps for reuse by scribe, omegon, and other ecosystem crates."
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
