[package]
name = "codex-store"
version.workspace = true
edition.workspace = true

[dependencies]
codex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
git2 = { version = "0.20", default-features = false }
walkdir = "2"
dirs = { workspace = true }
comrak = { workspace = true }

[dev-dependencies]
tempfile = "3"
