[package]
name = "codex-store"
version.workspace = true
edition.workspace = true

[features]
default = ["file-watcher"]
file-watcher = ["dep:notify"]

[dependencies]
codex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true, optional = true }
tracing = { workspace = true }
git2 = { version = "0.20", default-features = false }
tokio = { workspace = true }
walkdir = "2"
dirs = { workspace = true }
comrak = { workspace = true }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"
