[package]
name = "codex-store"
version.workspace = true
edition.workspace = true

[features]
default = ["file-watcher"]
file-watcher = ["dep:notify"]

[dependencies]
codex-models = { workspace = true }
codex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true, optional = true }
tracing = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
tokio = { workspace = true }
walkdir = "2"
dirs = { workspace = true }
comrak = { workspace = true }

[dev-dependencies]
tempfile = "3"
