[package]
name = "flynt-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flynt-agent"
path = "src/main.rs"

[dependencies]
flynt-core   = { workspace = true }
flynt-models = { workspace = true }
flynt-store  = { workspace = true }
flynt-forge  = { workspace = true }
flynt-flow   = { workspace = true }
styrene-forge = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
omegon-extension = { git = "https://github.com/styrene-lab/omegon.git", tag = "v0.20.0" }
async-trait = "0.1"
dirs        = "5"
clap = { version = "4", features = ["derive", "env"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
