[package]
name = "flynt-forge"
description = "Forge integration for Flynt — REST clients, sync engine, and sync state. Absorbed from scribe; auth converges with omegon's SecretsManager."
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

styrene-forge = { workspace = true }
flynt-models = { workspace = true }

reqwest = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
