[package]
name = "flynt-mobile"
version.workspace = true
edition.workspace = true

[dependencies]
flynt-core  = { workspace = true }
flynt-store = { path = "../flynt-store", default-features = false } # no file-watcher
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
comrak      = { workspace = true }
uuid        = { workspace = true }
dirs        = "5"
dioxus      = { workspace = true, features = ["mobile"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = { workspace = true }
url = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileManager", "NSURL", "NSString"] }
