[package]
name = "flynt-models"
description = "Core data types for Flynt — Task, Board, Engagement, and task file serialization. Minimal deps for reuse by omegon and ecosystem crates."
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
styrene-forge = { workspace = true }
